# serviceDeskAgents

./: .env.example  .gitignore  CHANGELOG.md  Makefile  docker-compose.yml  long.txt  pyproject.toml  sDa.txt
.github/workflows/: ci.yml
apps/: __init__.py
docs/: PLAN.md  README.md  STAGE_0.md  STAGE_1.md  STAGE_10.md  STAGE_10_5.md  STAGE_11.md  STAGE_12.md  STAGE_12_5.md  STAGE_12_6.md  STAGE_12_7.md  STAGE_13.md  STAGE_13_18.md  STAGE_13_21.md  STAGE_13_5.md  STAGE_13_6.md  STAGE_13_7.md  STAGE_13_8.md  STAGE_13_9.md  STAGE_2.md  STAGE_3.md  STAGE_4.md  STAGE_5.md  STAGE_6.md  STAGE_7.md  STAGE_8.md  STAGE_9.md  UI_UX_APPROACH.md
knowledge/: README.md
scripts/: rebuild-knowledge.sh  stage1-smoke.sh  stage10-smoke.sh  stage10_5-smoke.sh  stage11-smoke.sh  stage12-smoke.sh  stage12_5-smoke.sh  stage12_6-smoke.sh  stage12_7-smoke.sh  stage13-smoke.sh  stage13_5-smoke.sh  stage13_6-smoke.sh  stage13_7-smoke.sh  stage13_8-smoke.sh  stage13_9-smoke.sh  stage3-smoke.sh  stage4-smoke.sh  stage5-smoke.sh  stage6-smoke.sh  stage7-smoke.sh  stage8-smoke.sh  stage9-smoke.sh  validate-contracts.mjs  validate-contracts.sh  validate-docs.sh
tests/: test_agent_outcome.py  test_async_n8n_kafka.py  test_callback_receipts.py  test_case_trace_steps.py  test_channel_waiting_policy.py  test_config_assistant.py  test_deployment_hardening.py  test_execution_context.py  test_external_events.py  test_external_events_api.py  test_kafka_runtime_cli.py  test_legacy_slot_cleanup.py  test_openapi_contracts.py  test_privacy.py  test_runtime_guardrails.py  test_security_callbacks.py
(+118 files in other folders)
