[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "service-desk-agents"
version = "0.1.0"
description = "AI ServiceDesk Assistant MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "jsonschema>=4.22,<5.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[tool.setuptools.packages.find]
include = ["apps*"]
